[project]
name = "k360_token_python"
version = "0.1.0"
description = "JWT token management utilities for Kount API"
authors = [{ name = "Brad Rhoads", email = "brad.rhoads@kount.com" }]
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
